--- a/Exp5-盒维数的计算/实验报告.md
+++ b/Exp5-盒维数的计算/实验报告.md
@@ -36,6 +36,7 @@ def box_count(binary_image, box_sizes):
 ## 三、结果展示
 ### 1. 盒计数结果
 [插入log-log散点图和拟合直线图]
+![image](https://github.com/user-attachments/assets/46a49fcb-0153-4cb2-ba2e-c6bbc41e2861)
 
 关键数据:
 
