--- a/Exp5-盒维数的计算/实验报告.md
+++ b/Exp5-盒维数的计算/实验报告.md
@@ -40,10 +40,18 @@ def box_count(binary_image, box_sizes):
 
 关键数据:
 
-- 盒子尺寸(ε): [列表]
-- 盒子计数(N(ε)): [列表]
-- 拟合斜率: [数值]
-- 计算得分形维数D: [数值]
+ε =    1, N(ε) = 3213580
+ε =    2, N(ε) = 810927, 
+ε =    4, N(ε) = 206786, 
+ε =    9, N(ε) =  43098, 
+ε =   21, N(ε) =   8254, 
+ε =   45, N(ε) =   1803, 
+ε =   97, N(ε) =    380, 
+ε =  208, N(ε) =     81, 
+ε =  447, N(ε) =     16, 
+ε =  959, N(ε) =      4, 
+- 拟合斜率: [-1.98837]
+- 计算得分形维数D: [1.98837]
 ### 2. 与理论值比较
 - 理论分形维数: [填写理论值]
 - 计算误差分析: [填写误差百分比]
