--- a/Exp5-盒维数的计算/实验报告.md
+++ b/Exp5-盒维数的计算/实验报告.md
@@ -27,7 +27,8 @@ def box_count(binary_image, box_sizes):
 - 使用numpy.polyfit进行线性拟合
 - 计算分形维数 D = -slope
 ### 2. 实验参数
-[插入测试图像]
+[插入测试图像]![barnsley_fern](https://github.com/user-attachments/assets/58f50e23-1524-42d6-b09f-bd4efd12c687)
+
 
 
 ### 3. 遇到的问题与解决
