--- a/Exp1-相似性迭代生成分形曲线/实验报告.md
+++ b/Exp1-相似性迭代生成分形曲线/实验报告.md
@@ -12,44 +12,92 @@
    - 采用复数表示平面上的点，利用复数运算实现线段的缩放、旋转和平移。
    - 实现 `koch_generator(level)` 和 `minkowski_generator(level)` 两个函数，分别生成科赫曲线和闵可夫斯基香肠曲线的点序列。
    - 每次迭代，对当前所有线段应用生成元规则，插入新点，形成下一层级的点序列。
-   - **（可选）在此插入你认为关键的代码片段：**
-     ```python
-     # 例如，科赫曲线生成函数的主要部分
-     def koch_generator(u, level):
-         # ...你的实现...
-     ```
+   - **（可选）在此插入你认为关键的代码片段：
+   - p1 = start
+            p2 = start + (end - start)/3
+            p3 = p2 + (end - start)/3 * np.exp(1j*theta)
+            p4 = start + 2*(end - start)/3
+            p5 = end
+            
 
 2. **绘图与展示**
    - 使用 `matplotlib` 绘制不同迭代层级下的分形曲线。
    - 采用子图网格展示不同层级的分形效果，设置合适的标题和坐标比例。
-   - **（可选）插入绘图相关的代码片段：**
-     ```python
-     # 例如，绘制分形曲线的代码
-     plt.plot(points.real, points.imag)
-     ```
+   - **（可选）插入绘图相关的代码片段：
+   - if __name__ == "__main__":
+    # 初始线段
+    init_u = np.array([0, 1])
+    
+    # 创建2x2子图布局
+    fig, axs = plt.subplots(2, 2, figsize=(10, 10))
+    
+    # 生成不同层级的科赫曲线
+    for i in range(4):
+        koch_points = koch_generator(init_u, i+1)
+        axs[i//2, i%2].plot(koch_points.real, koch_points.imag, 'k-', lw=1)
+        axs[i//2, i%2].set_title(f"Koch Curve Level {i+1}")
+        axs[i//2, i%2].axis('equal')
+        axs[i//2, i%2].axis('off')
+    
+    plt.tight_layout()
+    plt.show()
+ 
 
 3. **遇到的问题与解决方法**
-   - （请在此填写你在实现过程中遇到的具体问题及解决思路，如复数运算、点插入顺序、图像显示等。）
+   - 绘制每一个分形曲线的循环单元时曾止步于如何接着上一次的单元的末尾继续绘制下一个单元，后来学会了将该级图形中已经绘制的点坐标存入列表，并在下一次绘制的单元将最后一个画的点作为这次单元的起始点。
+   -  start = u[i]
+            end = u[i+1] 
+            
+            # 生成科赫曲线的四个新线段
+            p1 = start
+            p2 = start + (end - start)/3
+            p3 = p2 + (end - start)/3 * np.exp(1j*theta)
+            p4 = start + 2*(end - start)/3
+            p5 = end
+            
+            new_u.extend([p1, p2, p3, p4, p5])
+        
+        u = np.array(new_u) #下一级曲线的长度就是现在u的长度，也就是生成这么多的小单元
 
 ## 三、结果展示
 
 ### 1. 科赫曲线（Koch Curve）
 
-- 插入生成的科赫曲线各层级图像（如 `koch_curves.png`）。
+- 插入生成的科赫曲线各层级图像
+- ![Figure_2](https://github.com/user-attachments/assets/4208cbb6-4702-4e29-adbb-3cfed40c63c6)
 - 简要说明各层级分形结构的变化。
-- **（可选）插入生成图像的代码片段。**
+- 一级一级节外生枝，级次增加，雪花的表面越来越毛糙，骨架还是最低几个级次的形状
+- **（可选）插入生成图像的代码片段。
+- -  for i in range(4):
+        koch_points = koch_generator(init_u, i+1)
+        axs[i//2, i%2].plot(koch_points.real, koch_points.imag, 'k-', lw=1)
+        axs[i//2, i%2].set_title(f"Koch Curve Level {i+1}")
+        axs[i//2, i%2].axis('equal')
+        axs[i//2, i%2].axis('off')
+
 
 ### 2. 闵可夫斯基香肠曲线（Minkowski Sausage）
 
-- 插入生成的闵可夫斯基香肠曲线各层级图像（如 `minkowski_sausages.png`）。
+- 插入生成的闵可夫斯基香肠曲线各层级图像
+- ![Figure_2](https://github.com/user-attachments/assets/657c6c2d-38a8-424e-81d8-d0817e57a535)
+
 - 简要说明各层级分形结构的变化。
-- **（可选）插入生成图像的代码片段。**
+- 级次增加，曲线从原来的分立、折线，越来越接近光滑连续的形状，“香肠”的块状结构也随着级次的增加越来越圆润，明显
+- **（可选）插入生成图像的代码片段。
+-  minkowski_points = minkowski_generator(init_u, i+1)
+        axs[i//2, i%2].plot(minkowski_points.real, minkowski_points.imag, 'k-', lw=1)
+        axs[i//2, i%2].set_title(f"Minkowski Sausage Level {i+1}")
+        axs[i//2, i%2].axis('equal')
+        axs[i//2, i%2].axis('off')
 
 ## 四、结果分析与思考
 
 - 分析分形曲线的自相似性和复杂度随迭代层级的变化。
+- 分形曲线无论如何放大，都能看见组成自身的小单元，复杂度随着迭代层级的变化攀升
 - 讨论基于复数的迭代方法与传统递归方法的优缺点。
+- 复数迭代使用了向量的思想与复数指数式计算方法，计算方便且直观；传统递归难以计算二维的图形分布，适用范围具有局限性。
 - 思考初始线段方向、生成元参数等对分形形态的影响。
+- 初始方向只决定了最终结果的整体朝向，生成元大大影响曲线的结构。如改变混沌系统的作用函数一样
 - （可选）尝试生成科赫雪花或修改生成元，观察分形变化。
 
 ---
