--- a/Exp3-迭代函数系统分形/实验报告.md
+++ b/Exp3-迭代函数系统分形/实验报告.md
@@ -42,11 +42,13 @@
 [插入生成的巴恩斯利蕨分形图]
 - 展示不同变换对应的叶片部分
 - 分析概率参数对叶片密度的影响
+![屏幕截图 2025-04-23 121442](https://github.com/user-attachments/assets/8512bd34-ba3f-4c57-996e-545edf604a13)
 
 ### 2. 概率树 
 [插入生成的概率树分形图]
 - 展示分支结构
 - 分析变换参数对树形的影响
+![屏幕截图 2025-04-23 121510](https://github.com/user-attachments/assets/e37f720c-15af-4426-afa4-a1c2575dac68)
 
 ## 分析与思考
 
