--- a/Exp4-曼德勃罗特集和朱利亚集分形/实验报告.md
+++ b/Exp4-曼德勃罗特集和朱利亚集分形/实验报告.md
@@ -49,11 +49,15 @@
 [插入Mandelbrot集图像]
 - 迭代次数对图像细节的影响
 - 自相似性特征分析
+![屏幕截图 2025-04-23 121829](https://github.com/user-attachments/assets/39862202-7f39-4041-abe1-7c149e4259cc)
 
 ### 2. Julia集 
 [插入Julia集图像]
 - 不同c值对Julia集形态的影响
 - 迭代次数与计算时间的关系
+![屏幕截图 2025-04-23 121835](https://github.com/user-attachments/assets/69c39d0e-4d52-4775-ba09-cf5b4e729764)
+![屏幕截图 2025-04-23 121839](https://github.com/user-attachments/assets/dc0ad202-b699-4152-8534-6fe0778ccaa2)
+![屏幕截图 2025-04-23 121845](https://github.com/user-attachments/assets/85c51747-3267-4086-a077-4af4ee092b78)
 
 ## 四、分析与思考
 
