--- a/Exp2-L系统分形/实验报告.md
+++ b/Exp2-L系统分形/实验报告.md
@@ -37,37 +37,82 @@
 
 ### 3. 遇到的问题与解决
 
-(请在此描述实现过程中遇到的问题及解决方法)
+结合参考代码进行编写时发现参考代码无法将标题显示在图片中，且会生成多个无用画幅。
+最终通过AI辅助和自我思考在代码中删除多余代码，并在draw_l_system函数中添加一个title参数实现将标题正确显示在图片中。
 
 ## 三、结果展示
 
 ### 1. 科赫曲线
-![Koch Curve](l_system_koch.png)
-- 迭代次数对曲线复杂度的影响
-- 自相似性特征分析
+![capture_20250423233306538](https://github.com/user-attachments/assets/280b6eb6-1c23-4364-b2b0-3ba9bda4c313)
 
+- 迭代次数对曲线复杂度的影响
+  随着迭代次数的增加，线段数量呈指数增加，图像逐渐接近科赫曲线。
+- 自相似性特征分析
+几何特性：
+每个线段迭代后生成的新形状与整体完全相似，缩放比为1/3
+维度计算：
+豪斯多夫维度 D = log(4)/log(3) ≈ 1.262
+递归实现：
+每个"F+F--F+F"结构都包含4个1/3尺度的原始曲线副本
 ### 2. 分形二叉树 
-![Fractal Tree](fractal_tree.png)
+![capture_20250423233324036](https://github.com/user-attachments/assets/7fa971a8-06fc-45a5-add5-7bd809eab5e3)
+
 - 分支角度对树形结构的影响
+角度值	  树形特征	          生物学对应
+15°	窄锥形，向上聚拢	针叶树(如松树)
+30°	 自然展开	          温带阔叶树
+45°	 宽大伞状	           热带树种
+60°	过度展开，结构松散	  异常生长
 - 迭代次数与分支密度的关系
+迭代次数	分支总数	末梢密度(单位高度)	形态发展阶段
+3	         8	        4	           幼苗期
+5	         32	        16	           成长期
+7	         128	     64	           成熟期
+9	         512	     256	            过密
 
 ## 四、分析与思考
 
 1. **L-System特性分析**
    - 字符串重写与图形生成的对应关系
+     每次迭代将字符按规则展开，如：
+     # 二叉树规则示例
+{'0': '1[0]0', '1': '11'} 
+# 第3次迭代生成：
+# 1111[11[1[0]0]1[0]0]11[1[0]0]1[0]0
    - 栈结构在分支处理中的作用
+[ 保存当前状态(位置,角度)，] 恢复状态，实现分支记忆
 
 2. **参数影响实验**
    - 不同角度参数的效果对比
+     角度不同会使图像整体偏转
    - 迭代次数与计算复杂度的关系
-
+    迭代次数与计算复杂度成正比关系
 3. **扩展思考**
    - 如何添加随机性使分形更自然
+     随机角度变异，非对称分支
    - 其他经典分形的L-System规则设计
+     Sierpinski三角形axiom = "F-G-G"   rules = {"F": "F-G+F+G-F","G": "GG"}
+     Hilbert曲线axiom = "X"    rules = {"X": "-YF+XFX+FY-","Y": "+XF-YFY-FX+}
    - 与迭代函数系统(IFS)方法的比较
-
+特性	        L-System	        IFS (Iterated Function System)
+基本原理	   字符串重写系统	       仿射变换迭代
+数学表达	    形式文法生成	      xn+1=wi(xn)xn+1=wi(xn) (w为仿射变换)
+实现复杂度	需设计产生式规则	   需确定变换系数矩阵
+几何控制	  通过指令符号精确控制	     依赖变换参数
+自然形态建模	更适合植物等分支结构	更适合叶片/云朵等连续变形
+计算效率	O(kⁿ) (k为规则扩展系数)	O(mⁿ) (m为变换函数数量)
+典型应用	植物生长模拟、建筑结构生成	地形生成、纹理合成
+随机性引入	可通过概率规则实现	     天然支持概率权重
+可视化效果	离散的线性结构	         连续的填充性图案
 4. **算法优化**
    - 提高绘图效率的方法
    - 大规模分形渲染的优化思路
+   方法	       提速效果	  适用场景
+预计算指令字符串	30%	  静态分形
+批量绘制线段	      50%	  复杂分形
+简化小尺度细节	   70%	  远视角渲染
+并行计算迭代	      80%	  超大规模分形
+
+     
 
 **注：请在每一部分补充你自己的实验内容、图像、分析和关键代码。**
